--- a/_pages/about.html
+++ b/_pages/about.html
@@ -14,9 +14,9 @@ permalink: /about/
     <section class="about-body">
       <ul class="contact-list">
       {% if site.email %}
-        <li class="email"><a href="mailto:{{site.email}}"><i class="fa fa-envelope-o"></i></a></li>
+        <li class="email"><a href="mail to:{{site.email}}"><i class="fa fa-envelope-o"></i></a></li>
       {% else %}
-        <li class="email"><a href="mailto:junhyung.datascience@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+        <li class="email"><a href="mail to:junhyung.datascience@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
       {% endif %}
 
       {% if site.phone %}
@@ -28,7 +28,7 @@ permalink: /about/
       {% if site.website %}
         <li class="website"><a href="http://{{site.website}}" target="_blank"><i class="fa fa-globe"></i></a></li>
       {% else %}
-        <li class="website"><a href="https://junhyungBYUN.github.io" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
+        <li class="website"><a href="https://junhyungbyun.github.io" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
       {% endif %}
 
       {% if site.linkedin %}
@@ -40,13 +40,13 @@ permalink: /about/
       {% if site.github %}
         <li class="github"><a href="http://github.com/{{site.github}}" target="_blank"><i class="fa fa-github"></i></a></li>
       {% else %}
-        <li class="github"><a href="http://github.com/junhyungBYUN" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+        <li class="github"><a href="http://github.com/junhyungbyun" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
       {% endif %}
 
       {% if site.twitter %}
         <li class="twitter"><a href="https://twitter.com/{{site.twitter}}" target="_blank"><i class="fa fa-twitter"></i></a></li>
       {% else %}
-        <li class="twitter"><a href="https://twitter.com/aaa" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        <li class="twitter"><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
       {% endif %}
 
       {% if site.facebook %}
