--- a/_pages/Machine-Learning-tags.html
+++ b/_pages/Machine-Learning-tags.html
@@ -1,7 +1,7 @@
 ---
 layout: home-page
 title: Machine Learning Tags
-permalink: /machine_learning_tags/
+permalink: /Machine-Learning-tags/
 ---
 {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
 {% assign tag_words = site_tags | split:',' | sort %}
