--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: home-page
         {% for tag in post.tags %}
         <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">|&#32;{{ tag }}</a>
         {% endfor %}
-        <a href="{{_pages/*}}/" class="post-card-link"><h3 class="post-card-title">{{post.title}}</h3></a>
+        <a href="{{site.baseurl}}_pages/*" class="post-card-link"><h3 class="post-card-title">{{post.title}}</h3></a>
       </div>
 
     </div>
