--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@ layout: home-page
         {% for tag in post.tags %}
         <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">|&#32;{{ tag }}</a>
         {% endfor %}
-        {% for tag in _pages %}
-        <a href="{{site.baseurl}}/_pages/{{tag}}" class="post-card-link"><h3 class="post-card-title">{{post.title}}</h3></a>
-        {% endfor %}
+        <a href="{{site.baseurl}}/tags#" class="post-card-link"><h3 class="post-card-title">{{post.title}}</h3></a>
       </div>
 
     </div>
