--- a/_pages/Graph-based Semi-Supervised Learning-tags.html
+++ b/_pages/Graph-based Semi-Supervised Learning-tags.html
@@ -1,11 +1,11 @@
 ---
 layout: home-page
-title: Machine Learning Tags
-permalink: /Machine-Learning-tags/
+title: Graph-based Semi-Supervised Learning Tags
+permalink: /Graph-based Semi-Supervised Learning-tags/
 ---
 <section class="blog-tags">
-  <h1>Tags in Machine Learning</h1>
-  <h2 id="Machine+Learning">Machine Learning</h2>
+  <h1>Tags in Graph-based Semi-Supervised Learning</h1>
+  <h2 id="Graph-based Semi-Supervised Learningng">Graph-based Semi-Supervised Learning</h2>
 <!--  lists all posts corresponding to specific tag...-->
     {% for post in site.tags[this_word] %}{% if post.title != null %}
     <div class="tag-list">
