Update Graph-based Semi-Supervised Learning-tags.html

--- a/_pages/Graph-based Semi-Supervised Learning-tags.html
+++ b/_pages/Graph-based Semi-Supervised Learning-tags.html
@@ -1,7 +1,7 @@
 ---
 layout: home-page
 title: Graph-based Semi-Supervised Learning Tags
-permalink: /Graph-based Semi-Supervised Learning-tags/
+permalink: /Graph-based-Semi-Supervised-Learning-tags/
 ---
 <section class="blog-tags">
   <h1>Tags in Graph-based Semi-Supervised Learning</h1>
